--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@mui/material": "^5.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6"
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
