--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -5,8 +5,8 @@
             "@components/*": ["src/components/*"],
             "@pages/*": ["src/pages/*"],
             "@src/*": ["src/*"],
-            "@shared": ["src/shared"],
-            "@store": ["src/store"]
+            "@shared": ["src/shared/*"],
+            "@store": ["src/store/*"]
         }
     }
 }
