--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,6 @@
 {
     "semi": true,
-    "tabWidth": 2,
+    "spaces": 4,
     "printWidth": 100,
     "singleQuote": true,
     "trailingComma": "none",
