--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "6",
     "recoil": "^0.6.1",
     "sass": "^1.49.9"
