--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "eslint-plugin-react": "^7.29.3",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
