Add a low effort dev navigation component 💻

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,7 +6,8 @@
             "@pages/*": ["src/pages/*"],
             "@src/*": ["src/*"],
             "@shared": ["src/shared/*"],
-            "@store": ["src/store/*"]
+            "@store": ["src/store/*"],
+            "@assets": ["src/assets/*"]
         }
     }
 }
