--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
-    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc"
+    "preview": "vite preview"
   },
   "resolutions": {
     "csstype": "3.0.10"
@@ -19,10 +16,7 @@
     "@mui/icons-material": "^5.4.4",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.4.3",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
     "date-fns": "^2.28.0",
-    "eslint-plugin-react": "^7.29.3",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-calendar": "^3.7.0",
@@ -38,10 +32,6 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
