--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-calendar": "^3.7.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^17.0.2",
+    "react-globe.gl": "^2.22.1",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "6",
@@ -29,6 +30,7 @@
     "sass": "^1.49.9"
   },
   "devDependencies": {
+    "@types/node": "^18.0.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
