--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/node": "^18.0.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/three": "^0.141.0",
     "@vitejs/plugin-react": "^1.0.7",
     "prettier": "^2.7.1",
     "typescript": "^4.5.4",
