--- a/package.json
+++ b/package.json
@@ -3,41 +3,41 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "dev": "next dev",
+    "build": "tsc && next build",
+    "start": "next start",
     "format": "prettier --write ."
   },
   "resolutions": {
     "csstype": "3.0.10"
   },
   "dependencies": {
-    "@emotion/react": "^11.8.1",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.4.4",
-    "@mui/lab": "^5.0.0-alpha.73",
-    "@mui/material": "^5.4.3",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.86",
+    "@mui/material": "^5.8.4",
     "date-fns": "^2.28.0",
-    "node-sass": "^7.0.1",
-    "react": "^17.0.2",
+    "firebase": "^9.8.3",
+    "next": "^12.1.6",
+    "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dark-mode-toggle": "^0.2.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-globe.gl": "^2.22.1",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.4.0",
     "react-pro-sidebar": "^0.7.1",
-    "react-router-dom": "6",
-    "recoil": "^0.6.1",
-    "sass": "^1.49.9"
+    "recoil": "^0.7.3"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "@types/three": "^0.141.0",
-    "@vitejs/plugin-react": "^1.0.7",
+    "css-loader": "^6.7.1",
     "prettier": "^2.7.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.8.0"
+    "sass": "^1.52.3",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.7.4"
   }
 }
