--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,11 +104,11 @@
   "exclude": ["node_modules"],
   "baseUrl": ".",
   "paths": {
-    "@components/*": ["src/components/*"],
-    "@pages/*": ["src/pages/*"],
+    "@/components/*": ["src/components/*"],
+    "@/pages/*": ["src/pages/*"],
     "@/src/*": ["src/*"],
-    "@shared": ["src/shared/*"],
-    "@store": ["src/store/*"],
-    "@assets": ["src/assets/*"]
+    "@/shared": ["src/shared/*"],
+    "@/store": ["src/store/*"],
+    "@/assets": ["src/assets/*"]
   }
 }
