--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "tsc && next build",
     "start": "next start",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "export": "next export",
+    "postinstall": "patch-package"
   },
   "resolutions": {
     "csstype": "3.0.10"
@@ -20,10 +22,12 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.8.3",
     "next": "^12.1.6",
+    "patch-package": "^6.4.7",
     "react": "^18.2.0",
     "react-calendar": "^3.7.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-globe.gl": "^2.22.1",
     "react-icons": "^4.4.0",
     "react-pro-sidebar": "^0.7.1",
