--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/material": "^5.8.4",
     "date-fns": "^2.28.0",
     "firebase": "^9.8.3",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.0",
     "next": "^12.1.6",
     "patch-package": "^6.4.7",
     "react": "^18.2.0",
