--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.86",
-    "@mui/material": "^5.8.4",
+    "@mui/material": "5.8.5",
     "firebase": "^9.8.3",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
