--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,12 @@
 {
   "hosting": {
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "cleanUrls": true,
     "public": "out",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"]
   },
