Move assets to public folder, refactor imges with Image from next/Image

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,7 +108,6 @@
     "@/pages/*": ["src/pages/*"],
     "@/src/*": ["src/*"],
     "@/shared": ["src/shared/*"],
-    "@/store": ["src/store/*"],
-    "@/assets": ["src/assets/*"]
+    "@/store": ["src/store/*"]
   }
 }
